// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes text 1`] = `
<withI18nextTranslation(MFACodeComponent)
  isLoading={false}
  onChangeText={[Function]}
  onSubmit={[Function]}
  value="new text"
/>
`;

exports[`onSubmit changes loading property 1`] = `
<withI18nextTranslation(MFACodeComponent)
  isLoading={true}
  onChangeText={[Function]}
  onSubmit={[Function]}
  value="123456"
/>
`;

exports[`renders correctly 1`] = `
<withI18nextTranslation(MFACodeComponent)
  isLoading={false}
  onChangeText={[Function]}
  onSubmit={[Function]}
  value=""
/>
`;
